# shorten-url

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py
app/api/routers/: shorten_url_route.py  shorten_url_router.py
app/common/: __init__.py  utils.py
app/core/: config.py  db.py  setup_lifespan.py
app/models/: shorten_url.py
app/modules/: __init__.py  base.py  conversion.py  hash_collision.py  hashing_module.py  hasing_module.py  minio_module.py  qrcode_module.py
app/services/: base.py  shorten_url_service.py
assets/: BLOG.md  notebook.ipynb  notes.md  tree.txt
compose/: docker-compose.minio.yml  docker-compose.mongo.yml
poc/: base.py  conversion.py  hash_collision.py
src/api/routers/: shorten_url_route.py
src/core/: config.py
src/models/: shorten_url.py
src/modules/: conversion.py  hash_collision.py
src/services/: shorten_url_service.py
test/: conftest.py  test_func.py
