[project]
name = "shorten-url"
version = "0.1.0"
description = "Building a shorten URL service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie==1.29.0",
    "colorlog==6.9.0",
    "fastapi==0.115.11",
    "minio>=7.2.15",
    "motor==3.7.0",
    "pydantic-settings==2.8.1",
    "qrcode>=8.2",
    "ruff>=0.11.9",
    "starlette==0.46.1",
]
